system: determine the LXA TAC hardware generation from devicetree
