# src/system.rs
@@ -15,6 +15,7 @@
 // with this program; if not, write to the Free Software Foundation, Inc.,
 // 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 
+use anyhow::{bail, Result};
 use async_std::sync::Arc;
 use nix::sys::utsname::uname;
 use serde::{Deserialize, Serialize};
@@ -24,6 +25,10 @@ use crate::broker::{BrokerBuilder, Topic};
 #[cfg(feature = "demo_mode")]
 mod read_dt_props {
     const DEMO_DATA_STR: &[(&str, &str)] = &[
+        (
+            "compatible",
+            "lxa,stm32mp153c-tac-gen3\0oct,stm32mp15xx-osd32\0st,stm32mp153",
+        ),
         ("chosen/barebox-version", "barebox-2022.11.0-20221121-1"),
         (
             "chosen/baseboard-factory-data/pcba-hardware-release",
@@ -141,20 +146,49 @@ impl Barebox {
     }
 }
 
+#[derive(Clone, Copy, Serialize, Deserialize)]
+pub enum HardwareGeneration {
+    Gen1,
+    Gen2,
+    Gen3,
+}
+
+impl HardwareGeneration {
+    pub fn get() -> Result<Self> {
+        let compatible = read_dt_property("compatible");
+
+        // The compatible property consists of strings separated by NUL bytes.
+        // We are interested in the first of these strings.
+        let device = compatible.split('\0').next().unwrap_or("<empty>");
+
+        match device {
+            "lxa,stm32mp157c-tac-gen1" => Ok(Self::Gen1),
+            "lxa,stm32mp157c-tac-gen2" => Ok(Self::Gen2),
+            "lxa,stm32mp153c-tac-gen3" => Ok(Self::Gen3),
+            gen => bail!("Running on unknown LXA TAC hardware generation \"{gen}\""),
+        }
+    }
+}
+
 pub struct System {
     pub uname: Arc<Topic<Arc<Uname>>>,
     pub barebox: Arc<Topic<Arc<Barebox>>>,
     pub tacd_version: Arc<Topic<String>>,
+    pub hardware_generation: Arc<Topic<HardwareGeneration>>,
 }
 
 impl System {
-    pub fn new(bb: &mut BrokerBuilder) -> Self {
+    pub fn new(bb: &mut BrokerBuilder, hardware_generation: HardwareGeneration) -> Self {
         let version = env!("VERSION_STRING").to_string();
 
         Self {
             uname: bb.topic_ro("/v1/tac/info/uname", Some(Arc::new(Uname::get()))),
             barebox: bb.topic_ro("/v1/tac/info/bootloader", Some(Arc::new(Barebox::get()))),
             tacd_version: bb.topic_ro("/v1/tac/info/tacd/version", Some(version)),
+            hardware_generation: bb.topic_ro(
+                "/v1/tac/info/hardware_generation",
+                Some(hardware_generation),
+            ),
         }
     }
 }
